FinalTurnin/y.output
Terminals which are not used

   VARIABLE


Grammar

    0 $accept: program $end

    1 program: headingstmt datasection algsection

    2 headingstmt: RWMAIN SEMICOLON

    3 datasection: RWDATA COLON
    4            | RWDATA COLON decstmtlist

    5 decstmtlist: decstmtlist decstmt
    6            | decstmt

    7 decstmt: RWINT COLON varlist
    8        | RWREAL COLON varlist

    9 varlist: varref COMMA varlist
   10        | varref SEMICOLON

   11 varref: VAR
   12       | VAR LBRACK LITINT RBRACK

   13 algsection: RWALG COLON programbody endmainstmt

   14 programbody: assignstmt programbody
   15            | assignstmt
   16            | controlstmt programbody
   17            | controlstmt
   18            | outputstmt programbody
   19            | outputstmt
   20            | inputstmt programbody
   21            | inputstmt
   22            | whilestmt programbody
   23            | whilestmt
   24            | countingstmt programbody
   25            | countingstmt
   26            | exitstmt programbody
   27            | exitstmt

   28 assignstmt: VAR assign bexp SEMICOLON
   29           | VAR LBRACK bexp RBRACK assign bexp SEMICOLON

   30 assign: ASSIGNOP

   31 bexp: bexp AND rexp
   32     | bexp OR rexp
   33     | NOT rexp
   34     | rexp

   35 rexp: rexp LESS exp
   36     | rexp LESSEQU exp
   37     | rexp GREATER exp
   38     | rexp GREATEQU exp
   39     | rexp EQUAL exp
   40     | rexp NOTEQUAL exp
   41     | exp

   42 exp: exp ADD term
   43    | exp MINUS term
   44    | term

   45 term: term MULT factor
   46     | term DIV factor
   47     | factor

   48 factor: MINUS unit
   49       | unit

   50 unit: LITINT
   51     | LITREAL
   52     | LPAREN bexp RPAREN
   53     | VAR
   54     | VAR LBRACK bexp RBRACK

   55 outputstmt: RWPRINT printlist

   56 printlist: CHARSTRING printlist
   57          | CHARSTRING COMMA printlist
   58          | CARRETURN printlist
   59          | CARRETURN COMMA printlist
   60          | bexp COMMA printlist
   61          | bexp SEMICOLON
   62          | SEMICOLON

   63 inputstmt: RWREAD varref SEMICOLON

   64 controlstmt: RWIF bexp SEMICOLON programbody RWEND RWIF SEMICOLON
   65            | RWIF bexp SEMICOLON programbody RWELSE SEMICOLON programbody RWEND RWIF SEMICOLON

   66 whilestmt: RWWHILE bexp SEMICOLON programbody RWEND RWWHILE SEMICOLON

   67 countingstmt: RWCOUNTING VAR RWUPWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   68             | RWCOUNTING VAR RWDOWNWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   69             | RWCOUNTING VAR LBRACK bexp RBRACK RWUPWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   70             | RWCOUNTING VAR LBRACK bexp RBRACK RWDOWNWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON

   71 exitstmt: RWEXIT SEMICOLON

   72 endmainstmt: RWEND RWMAIN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
RWMAIN (258) 2 72
RWEXIT (259) 71
RWIF (260) 64 65
RWELSE (261) 65
RWWHILE (262) 66
RWCOUNTING (263) 67 68 69 70
RWEND (264) 64 65 66 67 68 69 70 72
RWDATA (265) 3 4
RWALG (266) 13
LITINT (267) 12 50
LITREAL (268) 51
RWINT (269) 7
RWREAL (270) 8
RWUPWARD (271) 67 69
RWDOWNWARD (272) 68 70
RWTO (273) 67 68 69 70
RWREAD (274) 63
RWPRINT (275) 55
CHARSTRING (276) 56 57
CARRETURN (277) 58 59
ASSIGNOP (278) 30
COMMA (279) 9 57 59 60
SEMICOLON (280) 2 10 28 29 61 62 63 64 65 66 67 68 69 70 71 72
COLON (281) 3 4 7 8 13
LPAREN (282) 52
RPAREN (283) 52
LBRACK (284) 12 29 54 69 70
RBRACK (285) 12 29 54 69 70
ADD (286) 42
MINUS (287) 43 48
MULT (288) 45
DIV (289) 46
LESS (290) 35
GREATER (291) 37
LESSEQU (292) 36
GREATEQU (293) 38
EQUAL (294) 39
NOTEQUAL (295) 40
AND (296) 31
OR (297) 32
NOT (298) 33
VAR (299) 11 12 28 29 53 54 67 68 69 70
VARIABLE (300)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
headingstmt (48)
    on left: 2, on right: 1
datasection (49)
    on left: 3 4, on right: 1
decstmtlist (50)
    on left: 5 6, on right: 4 5
decstmt (51)
    on left: 7 8, on right: 5 6
varlist (52)
    on left: 9 10, on right: 7 8 9
varref (53)
    on left: 11 12, on right: 9 10 63
algsection (54)
    on left: 13, on right: 1
programbody (55)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27,
    on right: 13 14 16 18 20 22 24 26 64 65 66 67 68 69 70
assignstmt (56)
    on left: 28 29, on right: 14 15
assign (57)
    on left: 30, on right: 28 29
bexp (58)
    on left: 31 32 33 34, on right: 28 29 31 32 52 54 60 61 64 65 66
    67 68 69 70
rexp (59)
    on left: 35 36 37 38 39 40 41, on right: 31 32 33 34 35 36 37 38
    39 40
exp (60)
    on left: 42 43 44, on right: 35 36 37 38 39 40 41 42 43
term (61)
    on left: 45 46 47, on right: 42 43 44 45 46
factor (62)
    on left: 48 49, on right: 45 46 47
unit (63)
    on left: 50 51 52 53 54, on right: 48 49
outputstmt (64)
    on left: 55, on right: 18 19
printlist (65)
    on left: 56 57 58 59 60 61 62, on right: 55 56 57 58 59 60
inputstmt (66)
    on left: 63, on right: 20 21
controlstmt (67)
    on left: 64 65, on right: 16 17
whilestmt (68)
    on left: 66, on right: 22 23
countingstmt (69)
    on left: 67 68 69 70, on right: 24 25
exitstmt (70)
    on left: 71, on right: 26 27
endmainstmt (71)
    on left: 72, on right: 13


state 0

    0 $accept: . program $end

    RWMAIN  shift, and go to state 1

    program      go to state 2
    headingstmt  go to state 3


state 1

    2 headingstmt: RWMAIN . SEMICOLON

    SEMICOLON  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: headingstmt . datasection algsection

    RWDATA  shift, and go to state 6

    datasection  go to state 7


state 4

    2 headingstmt: RWMAIN SEMICOLON .

    $default  reduce using rule 2 (headingstmt)


state 5

    0 $accept: program $end .

    $default  accept


state 6

    3 datasection: RWDATA . COLON
    4            | RWDATA . COLON decstmtlist

    COLON  shift, and go to state 8


state 7

    1 program: headingstmt datasection . algsection

    RWALG  shift, and go to state 9

    algsection  go to state 10


state 8

    3 datasection: RWDATA COLON .
    4            | RWDATA COLON . decstmtlist

    RWINT   shift, and go to state 11
    RWREAL  shift, and go to state 12

    $default  reduce using rule 3 (datasection)

    decstmtlist  go to state 13
    decstmt      go to state 14


state 9

   13 algsection: RWALG . COLON programbody endmainstmt

    COLON  shift, and go to state 15


state 10

    1 program: headingstmt datasection algsection .

    $default  reduce using rule 1 (program)


state 11

    7 decstmt: RWINT . COLON varlist

    COLON  shift, and go to state 16


state 12

    8 decstmt: RWREAL . COLON varlist

    COLON  shift, and go to state 17


state 13

    4 datasection: RWDATA COLON decstmtlist .
    5 decstmtlist: decstmtlist . decstmt

    RWINT   shift, and go to state 11
    RWREAL  shift, and go to state 12

    $default  reduce using rule 4 (datasection)

    decstmt  go to state 18


state 14

    6 decstmtlist: decstmt .

    $default  reduce using rule 6 (decstmtlist)


state 15

   13 algsection: RWALG COLON . programbody endmainstmt

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    programbody   go to state 26
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 16

    7 decstmt: RWINT COLON . varlist

    VAR  shift, and go to state 34

    varlist  go to state 35
    varref   go to state 36


state 17

    8 decstmt: RWREAL COLON . varlist

    VAR  shift, and go to state 34

    varlist  go to state 37
    varref   go to state 36


state 18

    5 decstmtlist: decstmtlist decstmt .

    $default  reduce using rule 5 (decstmtlist)


state 19

   71 exitstmt: RWEXIT . SEMICOLON

    SEMICOLON  shift, and go to state 38


state 20

   64 controlstmt: RWIF . bexp SEMICOLON programbody RWEND RWIF SEMICOLON
   65            | RWIF . bexp SEMICOLON programbody RWELSE SEMICOLON programbody RWEND RWIF SEMICOLON

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    VAR      shift, and go to state 44

    bexp    go to state 45
    rexp    go to state 46
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 21

   66 whilestmt: RWWHILE . bexp SEMICOLON programbody RWEND RWWHILE SEMICOLON

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    VAR      shift, and go to state 44

    bexp    go to state 51
    rexp    go to state 46
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 22

   67 countingstmt: RWCOUNTING . VAR RWUPWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   68             | RWCOUNTING . VAR RWDOWNWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   69             | RWCOUNTING . VAR LBRACK bexp RBRACK RWUPWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   70             | RWCOUNTING . VAR LBRACK bexp RBRACK RWDOWNWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON

    VAR  shift, and go to state 52


state 23

   63 inputstmt: RWREAD . varref SEMICOLON

    VAR  shift, and go to state 34

    varref  go to state 53


state 24

   55 outputstmt: RWPRINT . printlist

    LITINT      shift, and go to state 39
    LITREAL     shift, and go to state 40
    CHARSTRING  shift, and go to state 54
    CARRETURN   shift, and go to state 55
    SEMICOLON   shift, and go to state 56
    LPAREN      shift, and go to state 41
    MINUS       shift, and go to state 42
    NOT         shift, and go to state 43
    VAR         shift, and go to state 44

    bexp       go to state 57
    rexp       go to state 46
    exp        go to state 47
    term       go to state 48
    factor     go to state 49
    unit       go to state 50
    printlist  go to state 58


state 25

   28 assignstmt: VAR . assign bexp SEMICOLON
   29           | VAR . LBRACK bexp RBRACK assign bexp SEMICOLON

    ASSIGNOP  shift, and go to state 59
    LBRACK    shift, and go to state 60

    assign  go to state 61


state 26

   13 algsection: RWALG COLON programbody . endmainstmt

    RWEND  shift, and go to state 62

    endmainstmt  go to state 63


state 27

   14 programbody: assignstmt . programbody
   15            | assignstmt .

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    $default  reduce using rule 15 (programbody)

    programbody   go to state 64
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 28

   18 programbody: outputstmt . programbody
   19            | outputstmt .

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    $default  reduce using rule 19 (programbody)

    programbody   go to state 65
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 29

   20 programbody: inputstmt . programbody
   21            | inputstmt .

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    $default  reduce using rule 21 (programbody)

    programbody   go to state 66
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 30

   16 programbody: controlstmt . programbody
   17            | controlstmt .

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    $default  reduce using rule 17 (programbody)

    programbody   go to state 67
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 31

   22 programbody: whilestmt . programbody
   23            | whilestmt .

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    $default  reduce using rule 23 (programbody)

    programbody   go to state 68
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 32

   24 programbody: countingstmt . programbody
   25            | countingstmt .

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    $default  reduce using rule 25 (programbody)

    programbody   go to state 69
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 33

   26 programbody: exitstmt . programbody
   27            | exitstmt .

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    $default  reduce using rule 27 (programbody)

    programbody   go to state 70
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 34

   11 varref: VAR .
   12       | VAR . LBRACK LITINT RBRACK

    LBRACK  shift, and go to state 71

    $default  reduce using rule 11 (varref)


state 35

    7 decstmt: RWINT COLON varlist .

    $default  reduce using rule 7 (decstmt)


state 36

    9 varlist: varref . COMMA varlist
   10        | varref . SEMICOLON

    COMMA      shift, and go to state 72
    SEMICOLON  shift, and go to state 73


state 37

    8 decstmt: RWREAL COLON varlist .

    $default  reduce using rule 8 (decstmt)


state 38

   71 exitstmt: RWEXIT SEMICOLON .

    $default  reduce using rule 71 (exitstmt)


state 39

   50 unit: LITINT .

    $default  reduce using rule 50 (unit)


state 40

   51 unit: LITREAL .

    $default  reduce using rule 51 (unit)


state 41

   52 unit: LPAREN . bexp RPAREN

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    VAR      shift, and go to state 44

    bexp    go to state 74
    rexp    go to state 46
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 42

   48 factor: MINUS . unit

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    VAR      shift, and go to state 44

    unit  go to state 75


state 43

   33 bexp: NOT . rexp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    rexp    go to state 76
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 44

   53 unit: VAR .
   54     | VAR . LBRACK bexp RBRACK

    LBRACK  shift, and go to state 77

    $default  reduce using rule 53 (unit)


state 45

   31 bexp: bexp . AND rexp
   32     | bexp . OR rexp
   64 controlstmt: RWIF bexp . SEMICOLON programbody RWEND RWIF SEMICOLON
   65            | RWIF bexp . SEMICOLON programbody RWELSE SEMICOLON programbody RWEND RWIF SEMICOLON

    SEMICOLON  shift, and go to state 78
    AND        shift, and go to state 79
    OR         shift, and go to state 80


state 46

   34 bexp: rexp .
   35 rexp: rexp . LESS exp
   36     | rexp . LESSEQU exp
   37     | rexp . GREATER exp
   38     | rexp . GREATEQU exp
   39     | rexp . EQUAL exp
   40     | rexp . NOTEQUAL exp

    LESS      shift, and go to state 81
    GREATER   shift, and go to state 82
    LESSEQU   shift, and go to state 83
    GREATEQU  shift, and go to state 84
    EQUAL     shift, and go to state 85
    NOTEQUAL  shift, and go to state 86

    $default  reduce using rule 34 (bexp)


state 47

   41 rexp: exp .
   42 exp: exp . ADD term
   43    | exp . MINUS term

    ADD    shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 41 (rexp)


state 48

   44 exp: term .
   45 term: term . MULT factor
   46     | term . DIV factor

    MULT  shift, and go to state 89
    DIV   shift, and go to state 90

    $default  reduce using rule 44 (exp)


state 49

   47 term: factor .

    $default  reduce using rule 47 (term)


state 50

   49 factor: unit .

    $default  reduce using rule 49 (factor)


state 51

   31 bexp: bexp . AND rexp
   32     | bexp . OR rexp
   66 whilestmt: RWWHILE bexp . SEMICOLON programbody RWEND RWWHILE SEMICOLON

    SEMICOLON  shift, and go to state 91
    AND        shift, and go to state 79
    OR         shift, and go to state 80


state 52

   67 countingstmt: RWCOUNTING VAR . RWUPWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   68             | RWCOUNTING VAR . RWDOWNWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   69             | RWCOUNTING VAR . LBRACK bexp RBRACK RWUPWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   70             | RWCOUNTING VAR . LBRACK bexp RBRACK RWDOWNWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON

    RWUPWARD    shift, and go to state 92
    RWDOWNWARD  shift, and go to state 93
    LBRACK      shift, and go to state 94


state 53

   63 inputstmt: RWREAD varref . SEMICOLON

    SEMICOLON  shift, and go to state 95


state 54

   56 printlist: CHARSTRING . printlist
   57          | CHARSTRING . COMMA printlist

    LITINT      shift, and go to state 39
    LITREAL     shift, and go to state 40
    CHARSTRING  shift, and go to state 54
    CARRETURN   shift, and go to state 55
    COMMA       shift, and go to state 96
    SEMICOLON   shift, and go to state 56
    LPAREN      shift, and go to state 41
    MINUS       shift, and go to state 42
    NOT         shift, and go to state 43
    VAR         shift, and go to state 44

    bexp       go to state 57
    rexp       go to state 46
    exp        go to state 47
    term       go to state 48
    factor     go to state 49
    unit       go to state 50
    printlist  go to state 97


state 55

   58 printlist: CARRETURN . printlist
   59          | CARRETURN . COMMA printlist

    LITINT      shift, and go to state 39
    LITREAL     shift, and go to state 40
    CHARSTRING  shift, and go to state 54
    CARRETURN   shift, and go to state 55
    COMMA       shift, and go to state 98
    SEMICOLON   shift, and go to state 56
    LPAREN      shift, and go to state 41
    MINUS       shift, and go to state 42
    NOT         shift, and go to state 43
    VAR         shift, and go to state 44

    bexp       go to state 57
    rexp       go to state 46
    exp        go to state 47
    term       go to state 48
    factor     go to state 49
    unit       go to state 50
    printlist  go to state 99


state 56

   62 printlist: SEMICOLON .

    $default  reduce using rule 62 (printlist)


state 57

   31 bexp: bexp . AND rexp
   32     | bexp . OR rexp
   60 printlist: bexp . COMMA printlist
   61          | bexp . SEMICOLON

    COMMA      shift, and go to state 100
    SEMICOLON  shift, and go to state 101
    AND        shift, and go to state 79
    OR         shift, and go to state 80


state 58

   55 outputstmt: RWPRINT printlist .

    $default  reduce using rule 55 (outputstmt)


state 59

   30 assign: ASSIGNOP .

    $default  reduce using rule 30 (assign)


state 60

   29 assignstmt: VAR LBRACK . bexp RBRACK assign bexp SEMICOLON

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    VAR      shift, and go to state 44

    bexp    go to state 102
    rexp    go to state 46
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 61

   28 assignstmt: VAR assign . bexp SEMICOLON

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    VAR      shift, and go to state 44

    bexp    go to state 103
    rexp    go to state 46
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 62

   72 endmainstmt: RWEND . RWMAIN SEMICOLON

    RWMAIN  shift, and go to state 104


state 63

   13 algsection: RWALG COLON programbody endmainstmt .

    $default  reduce using rule 13 (algsection)


state 64

   14 programbody: assignstmt programbody .

    $default  reduce using rule 14 (programbody)


state 65

   18 programbody: outputstmt programbody .

    $default  reduce using rule 18 (programbody)


state 66

   20 programbody: inputstmt programbody .

    $default  reduce using rule 20 (programbody)


state 67

   16 programbody: controlstmt programbody .

    $default  reduce using rule 16 (programbody)


state 68

   22 programbody: whilestmt programbody .

    $default  reduce using rule 22 (programbody)


state 69

   24 programbody: countingstmt programbody .

    $default  reduce using rule 24 (programbody)


state 70

   26 programbody: exitstmt programbody .

    $default  reduce using rule 26 (programbody)


state 71

   12 varref: VAR LBRACK . LITINT RBRACK

    LITINT  shift, and go to state 105


state 72

    9 varlist: varref COMMA . varlist

    VAR  shift, and go to state 34

    varlist  go to state 106
    varref   go to state 36


state 73

   10 varlist: varref SEMICOLON .

    $default  reduce using rule 10 (varlist)


state 74

   31 bexp: bexp . AND rexp
   32     | bexp . OR rexp
   52 unit: LPAREN bexp . RPAREN

    RPAREN  shift, and go to state 107
    AND     shift, and go to state 79
    OR      shift, and go to state 80


state 75

   48 factor: MINUS unit .

    $default  reduce using rule 48 (factor)


state 76

   33 bexp: NOT rexp .
   35 rexp: rexp . LESS exp
   36     | rexp . LESSEQU exp
   37     | rexp . GREATER exp
   38     | rexp . GREATEQU exp
   39     | rexp . EQUAL exp
   40     | rexp . NOTEQUAL exp

    LESS      shift, and go to state 81
    GREATER   shift, and go to state 82
    LESSEQU   shift, and go to state 83
    GREATEQU  shift, and go to state 84
    EQUAL     shift, and go to state 85
    NOTEQUAL  shift, and go to state 86

    $default  reduce using rule 33 (bexp)


state 77

   54 unit: VAR LBRACK . bexp RBRACK

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    VAR      shift, and go to state 44

    bexp    go to state 108
    rexp    go to state 46
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 78

   64 controlstmt: RWIF bexp SEMICOLON . programbody RWEND RWIF SEMICOLON
   65            | RWIF bexp SEMICOLON . programbody RWELSE SEMICOLON programbody RWEND RWIF SEMICOLON

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    programbody   go to state 109
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 79

   31 bexp: bexp AND . rexp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    rexp    go to state 110
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 80

   32 bexp: bexp OR . rexp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    rexp    go to state 111
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 81

   35 rexp: rexp LESS . exp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    exp     go to state 112
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 82

   37 rexp: rexp GREATER . exp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    exp     go to state 113
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 83

   36 rexp: rexp LESSEQU . exp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    exp     go to state 114
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 84

   38 rexp: rexp GREATEQU . exp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    exp     go to state 115
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 85

   39 rexp: rexp EQUAL . exp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    exp     go to state 116
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 86

   40 rexp: rexp NOTEQUAL . exp

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    exp     go to state 117
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 87

   42 exp: exp ADD . term

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    term    go to state 118
    factor  go to state 49
    unit    go to state 50


state 88

   43 exp: exp MINUS . term

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    term    go to state 119
    factor  go to state 49
    unit    go to state 50


state 89

   45 term: term MULT . factor

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    factor  go to state 120
    unit    go to state 50


state 90

   46 term: term DIV . factor

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    VAR      shift, and go to state 44

    factor  go to state 121
    unit    go to state 50


state 91

   66 whilestmt: RWWHILE bexp SEMICOLON . programbody RWEND RWWHILE SEMICOLON

    RWEXIT      shift, and go to state 19
    RWIF        shift, and go to state 20
    RWWHILE     shift, and go to state 21
    RWCOUNTING  shift, and go to state 22
    RWREAD      shift, and go to state 23
    RWPRINT     shift, and go to state 24
    VAR         shift, and go to state 25

    programbody   go to state 122
    assignstmt    go to state 27
    outputstmt    go to state 28
    inputstmt     go to state 29
    controlstmt   go to state 30
    whilestmt     go to state 31
    countingstmt  go to state 32
    exitstmt      go to state 33


state 92

   67 countingstmt: RWCOUNTING VAR RWUPWARD . bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    VAR      shift, and go to state 44

    bexp    go to state 123
    rexp    go to state 46
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 93

   68 countingstmt: RWCOUNTING VAR RWDOWNWARD . bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON

    LITINT   shift, and go to state 39
    LITREAL  shift, and go to state 40
    LPAREN   shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    VAR      shift, and go to state 44

    bexp    go to state 124
    rexp    go to state 46
    exp     go to state 47
    term    go to state 48
    factor  go to state 49
    unit    go to state 50


state 94

   69 countingstmt: RWCOUNTING VAR LBRACK . bexp RBRACK RWUPWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
   70             | RWCOUNTING VAR LBRACK . bexp RBRACK RWDOWNWARD bexp RWTO bexp SEMICOLON programbody RWEND RWCOUNTING SEMICOLON
